CHANGES
=======

3.12.7 (unreleased)
-------------------

- Fix error when no charset matches form data and HTTP_ACCEPT_CHARSET contains a *.


3.12.6 (2010-12-17)
-------------------

- Uploading a non-CRLF version to pypi.


3.12.5 (2010-12-14)
-------------------

- Renamed the ``tests`` extra to ``test``.

- Added a test for our own configure.zcml.

- As per W3C spec UTF-8 will be the charset if the browser does not set a header.

3.12.4 (2010-07-15)
-------------------

- LP #131460: Make principal logging unicode safe.
- Remove use of string exceptions in tests, http://bugs.debian.org/585343
- Add IStartRequestEvent and StartRequestEvent for using in
  zope.app.publication (matching up with IEndRequestEvent and EndRequestEvent).
  This included refactoring to produce one definition of 'event with a request'
  - IRequestEvent.

3.12.3 (2010-04-30)
-------------------

- LP #209440: Don't obscure original exception when handling retries
  in ``publish.publish()`` with ``handleErrors == False``.   This change
  makes debugging such exception in unit tests easier.
  Thanks to James Henstridge for the patch.

- LP #98395: allow unicode output of XML content whose mimetype does not
  begin with ``text/``, per RFC 3023 as well as for content types ending
  in ``+xml`` such as Mozilla XUL's ``application/vnd+xml``.  Thanks to
  Justin Ryan for the patch.

3.12.2 (2010-04-16)
-------------------

- Removed use of 'zope.testing.doctestunit' in favor of stdlib's 'doctest'.

- Fixed bug where xml-rpc requests would hang when served using
  paster.httpserver.

3.12.1 (2010-02-21)
-------------------

- BaseRequest.traverse should not call traversal hooks on elements
  previously traversed but wrapped in a security Proxy.

3.12.0 (2009-12-31)
-------------------

- Reverted change done in 3.6.2. The zope.authentication dependency has been
  removed again. The BasicAuthAdapter and FTPAuth adapters are now found in
  the new zope.login package.

3.11.0 (2009-12-15)